# meta-py

./: README.md  Untitled.ipynb  grasp_notes.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
binder/: environment.yml
data/: ch150.tsp
metapy/: __init__.py
metapy/evolutionary/: evolutionary.py
metapy/local_search/: hill_climbing.py
metapy/tsp/: construction.py  euclidean.py  grasp.py
