[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metapy"
dynamic = ["version"]
description = "Metaheuristic and optimisation tools for education"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Thomas Monks", email = "t.m.w.monks@exeter.ac.uk" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "numpy>=1.19.2",
    "pandas>=1.1.0",
    "scipy>=1.5.2",
]

[project.urls]
Homepage = "https://github.com/TomMonks/meta-py"

[tool.hatch.version]
path = "metapy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/metapy",
]
